--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <p class="parrafos1" id="parrafo4">
     Parrafo 4
   </p>
+
+
+
+    <h3 id="subtitle">Soy un subtitulo</h3>
+    <p id="parrafo">Soy un parrafo</p>
+
+    <ul id="list">
+    </ul>
+
+      
   <script src="js.js"></script>
 </body>
 </html>
